k8s/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: api-testing-prefix
spec:
  stripPrefix:
    prefixes:
      - /apitestingsvc
