k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-testing-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api-testing
  template:
    metadata:
      labels:
        app: api-testing
    spec:
      containers:
        - name: api-testing
          image: pudyn/api-testing:latest
          ports:
            - containerPort: 8080
          imagePullPolicy: Always
          resources:
            requests:
              memory: "512Mi"
              cpu: "500m"
            limits:
              memory: "1Gi"
              cpu: "1"
---
# Service
apiVersion: v1
kind: Service
metadata:
  name: api-testing-service
spec:
  selector:
    app: api-testing
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
